@@ -8,8 +8,6 @@ TODO:
    http://sourceforge.net/tracker/?func=detail&aid=2539795&group_id=219599&atid=1046865
 
  - Unused class: Delete class
- - rename mode
- - really delete mode?
 //------------------------------------------------------------------------------
 Code examples:
  - org.eclipse.jdt.internal.corext.util.JavaModelUtil
@@ -18,4 +16,5 @@ Code examples:
 
 org.eclipse.pde.internal.core.util.PatternConstructor
 org.eclipse.pde.internal.core.util.PDEJavaHelper.getSearchScope(IJavaProject)
+org.eclipse.releng.tools.AdvancedFixCopyrightAction.run(IAction)
 //------------------------------------------------------------------------------
