@@ -214,7 +214,9 @@ ModesPanel_mode_full=Full
 #
 ModesPanel_ModeLabel=Active mode
 ModesPanel_ModeNew=New...
-ModesPanel_ModeRemove=Remove
+ModesPanel_ModeRemove=Remove...
+ModesPanel_ModeRemoveQuestion=Do you really want to remove mode:\ 
+ModesPanel_ModeRename=Rename...
 #ModesPanel_ModePressNewHint=Change "Detection mode", or press "New..." for custom detection!
 ModesPanel_ModePressNewHint=Change "Active mode", or press "New..."
 ModesPanel_ModeAlreadyExists=Mode name already exists
